--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<%= link_to 'Twitterでログイン', '/auth/twitter' %>
+<% if flash[:notice] %>
+    <div class="alert alert-success">
+      	<%= flash[:notice] %>
+    </div>
+ <% end %>
+
 <%= yield %>
 
 </body>
