--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,2 +1,21 @@
-<p>グループ作成　フォロワーから選んで</p>
-<p><%= @friend_first[:id] %> : <%= @friend_first[:name] %>@<%= @friend_first[:screen_name] %></p>
+<p>グループ新規作成　フォロワーから選んで → (フォロワー)かつ(Majitterユーザー) の表示</p>
+
+
+<p><%= @friends[:users][0][:id] %> : <%= @friends[:users][0][:name] %>@<%= @friends[:users][0][:screen_name] %></p>
+
+<% @friends[:users].each do |friend| %>
+	<p><%= image_tag friend[:profile_image_url] %><%= friend[:name] %>@<%= friend[:screen_name] %></p>
+<% end %>
+
+
+
+
+
+<%= form_for @group do |f| %>
+	<%= f.label :group_name %>
+	<%= f.text_field :group_name %><br>
+    <%= f.collection_check_boxes(:user_ids, User.all, :id, :nickname) do |m| %> <!--第1引数を省略したことによってエラーが解決-->
+    	<%= m.label { m.check_box + m.text } %><br>
+    <% end %> 
+    <%= f.submit "グループをつくる" %>
+<% end %>
