--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -12,10 +12,12 @@
 
 
 <%= form_for @group do |f| %>
-	<%= f.label :group_name %>
+	<%= f.label 'グループ名' %>
 	<%= f.text_field :group_name %><br>
-    <%= f.collection_check_boxes(:user_ids, User.all, :id, :nickname) do |m| %> <!--第1引数を省略したことによってエラーが解決-->
-    	<%= m.label { m.check_box + m.text } %><br>
+	<%= f.fields_for :requests do |r| %>
+    	<%= r.collection_check_boxes(:user_ids, User.all, :id, :nickname) do |m| %> <!--第1引数を省略したことによってエラーが解決-->
+    		<%= m.label { m.check_box + m.text } %><br>
+    	<% end %>
     <% end %> 
-    <%= f.submit "[グループをつくる]" %>
+    <%= f.submit "つくる" %>
 <% end %>
