--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -12,12 +12,12 @@
 
 
 <%= form_for @group do |f| %>
-	<%= f.label 'グループ名' %>
+	<%= f.label :group_name %>
 	<%= f.text_field :group_name %><br>
-	<%= f.fields_for :requests do |r| %>
-		<%= r.collection_check_boxes(:user_ids, User.all, :id, :nickname) do |m| %> <!--第1引数を省略したことによってエラーが解決-->
-    		<%= m.label { m.check_box + m.text } %><br>
-    	<% end %>
-    <% end %> 
+	<%= f.label :requests %>
+	<%= f.collection_check_boxes(:accepter_ids, User.all, :id, :nickname) do |r| %>
+	<!-- 先頭に f をつけるなら、第一引数は省略せねばならないっぽい -->
+		<%= r.label { r.check_box + r.text } %>
+	<% end %>
     <%= f.submit "つくる" %>
 <% end %>
