--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,10 +10,12 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
+ * require は使わない。、と聞いたのだが、これを使わないと custom.css.scss を組み込んでくれないみたい
+ * =require_tree .
+ * =require_self
  */
 
+// Bootstrap Sass
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
