--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,23 +11,13 @@
 </head>
 <body>
 
+  <%= render partial: 'layouts/header' %>
 
-
-<% unless logged_in? %>
-	<%= link_to 'Twitterでログイン', '/auth/twitter' %>
-	<% if flash[:notice] %>
-    	<div class="alert alert-success">
-      		<%= flash[:notice] %>
-    	</div>
- 	<% end %>
-<% else %>
-	<%= link_to 'ログアウト', logout_path %>
-	<%= image_tag current_user.image_url %><p><%= current_user.nickname %></p>
-  <!-- <%= label_tag current_user.nickname %> -->
-<% end %>
-
-
-<%= yield %>
+  <div class="container">
+    <% if logged_in? %>
+      <%= yield %>
+    <% end %>
+  </div>
 
 </body>
 </html>
