--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,1 +1,34 @@
-<p><%= image_tag t.user.image_url %><%= t.user.nickname %> : <%= t.text %> (<%= t.group.group_name %>)[<%= time_ago_in_words t.created_at %>]</p>
+
+<!-- タイムライン -->
+
+<% @tweets.each do |t| %>
+  <div class="row">
+    <div class="col-xs-0 col-sm-3"></div>
+    <div class="col-xs-12 col-sm-6">
+
+      <div class="panel panel-default">
+        <div class="panel-body">
+
+          <div class="media">
+            <div class="media-left">
+              <a href="#">
+                <%= image_tag t.user.image_url, class: "media-object" %>
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">@<%= t.user.nickname %> (<%= time_ago_in_words t.created_at %>)</h4>
+              <%= t.text %>
+            </div>
+          </div>
+
+        </div>
+        <div class="panel-footer text-right"><%= t.group.group_name %></div>
+      </div>
+
+          
+    </div>
+    <div class="col-xs-0 col-sm-3"></div>
+  </div>
+<% end %>
+
+
