--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,10 +1,11 @@
 
 <!-- タイムライン -->
 
-<% @tweets.each do |t| %>
+<!-- render を使うと each文が省略できる？  @tweets → tweet になるっぽい -->
+
   <div class="row">
-    <div class="col-xs-0 col-sm-3"></div>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-0 col-sm-2"></div>
+    <div class="col-xs-12 col-sm-8">
 
       <div class="panel panel-default">
         <div class="panel-body">
@@ -12,23 +13,19 @@
           <div class="media">
             <div class="media-left">
               <a href="#">
-                <%= image_tag t.user.image_url, class: "media-object" %>
+                <%= image_tag tweet.user.image_url, class: "media-object" %>
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading">@<%= t.user.nickname %> (<%= time_ago_in_words t.created_at %>)</h4>
-              <%= t.text %>
+              <h4 class="media-heading">@<%= tweet.user.nickname %> (<%= time_ago_in_words tweet.created_at %>)</h4>
+              <%= tweet.text %>
             </div>
           </div>
 
         </div>
-        <div class="panel-footer text-right"><%= t.group.group_name %></div>
+        <div class="panel-footer text-right"><%= tweet.group.group_name %></div>
       </div>
 
-          
     </div>
-    <div class="col-xs-0 col-sm-3"></div>
+    <div class="col-xs-0 col-sm-2"></div>
   </div>
-<% end %>
-
-
