--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -2,6 +2,6 @@
 <div class="panel panel-default active">
   <div class="panel-body">
     <%= link_to r.group.group_name, "/groups/#{r.group.id}" %>
-    (@<%= r.requester.nickname %> より)
+    (@<%= r.requester.user_name %> より)
   </div>
 </div>
