--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,7 +31,7 @@
   					<li><a href="/requests">リクエスト</a></li>
   					<li role="separator" class="divider"></li>
   					<li class="dropdown">
-  						<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.nickname %> <%= image_tag current_user.image_url %> <span class="caret"></span></a>
+  						<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.user_name %> <%= image_tag current_user.image_url %> <span class="caret"></span></a>
   						<ul class="dropdown-menu">
   							<li><%= link_to 'ログアウト', logout_path %></li>
   						</ul>
