--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -17,7 +17,7 @@
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading">@<%= tweet.user.nickname %> (<%= time_ago_in_words tweet.created_at %>)</h4>
+              <h4 class="media-heading">@<%= tweet.user.user_name %> (<%= time_ago_in_words tweet.created_at %>)</h4>
               <%= tweet.text %>
             </div>
           </div>
