--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -17,9 +17,11 @@
 <div class="row">
 	<div class="col-xs-0 col-sm-2"></div>
   <div class="col-xs-12 col-sm-8">
-    <button type="button" class="btn btn-default" href="/groups/new">
+    <!-- <button type="button" class="btn btn-default" href="/groups/new"> -->
+    <a class="btn btn-default" href="/groups/new" role="button">
       <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> グループをつくる
-    </button>
+    </a>
+    <!-- </button> -->
   </div>
   <div class="col-xs-0 col-sm-2"></div>
 </div>
@@ -43,6 +45,5 @@
 	</div>
 
 <% end %>
-
 
 
