improve by rails tutorial

--- a/app/views/groups/_members.html.erb
+++ b/app/views/groups/_members.html.erb
@@ -12,7 +12,7 @@
 	<% end %>
 </div>
 
-<% unless @group.requests==[] %>
+<% if @group.requests.any? %>
 	<div class="page-header">
 		<h2>招待中</h2>
 	</div>
