--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -6,9 +6,9 @@
     <div class="col-xs-12 col-sm-11">
   		<h1><%= @group.group_name %></h1>
   		<% if @request_for_me %>
-			 　<!-- <%= link_to '参加', "/members/#{@group.id}/edit" %>
-			 　<%= link_to '拒否', "/requests/#{@group.id}", method: :delete %> -->
-			 　<p><a class="btn btn-primary" href="/members/#{@group.id}/edit" role="button">参加</a> <a class="btn btn-default" href="/requests/#{@group.id}" role="button"　method="delete">拒否</a></p>
+			 　<%= link_to '参加', "/members/#{@group.id}/edit", class: "btn btn-primary", role: "button" %>
+			 　<%= link_to '拒否', "/requests/#{@group.id}", class: "btn btn-default", role: "button", method: :delete %>
+			 <!-- 　<p><a class="btn btn-primary" href="/members/#{@group.id}/edit" role="button">参加</a> <a class="btn btn-default" href="/requests/#{@group.id}" role="button"　method="delete">拒否</a></p> -->
 		  <% end %>
     </div>
     <div class="col-xs-0 col-sm-1"></div>
@@ -45,7 +45,8 @@
   	<div class="col-xs-0 col-sm-2"></div>
   </div>
 
-  <% unless @tweets==[] %>
+  
+  <% if @tweets.any? %>
   	<div class="group-timeline"><%= render @tweets %></div>
   <% else %>
     <div class="col-xs-0 col-sm-2"></div>
