--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -4,11 +4,12 @@
 
   	<div class="col-xs-12 col-sm-8">
   	
-		<% unless @maji_followers==[] %>
+		<% if @maji_followers.any? %>
 
 			<%= form_for(@group, class: "form-horizontal") do |f| %>
+				<%= render 'shared/error_messages', object: f.object %>
 				<div class="form_group">
-					<%= f.label 'グループ名', class: "col-xs-12 col-sm-3 control-label", style: "padding-bottom:20px" %>
+					<%= f.label 'グループ名(20文字まで)', class: "col-xs-12 col-sm-3 control-label", style: "padding-bottom:20px" %>
 					<div class="col-xs-12 col-sm-9" style="padding-bottom:20px" >
 						<%= f.text_field :group_name, class: "form-control"%>
 					</div>
@@ -24,7 +25,7 @@
   									<div class="row">
     									
 											<div class="col-xs-1 col-sm-1">
-												<%= r.check_box(class: "check_box") %>
+												<%= r.check_box(class: "check_box form-control") %>
 											</div>
 											<div class="col-xs-9 col-sm-9">
 												<%= image_tag r.object.image_url %> <%= r.object.account_name %>@<%= r.object.user_name %>
