--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
   <%= render partial: 'layouts/header' %>
 
   <div class="container">
+
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %> center"><%= message %></div>
+    <% end %>
+ 
     <% if logged_in? %>
       <%= yield %>
     <% end %>
