--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -5,7 +5,7 @@
   	<div class="col-xs-12 col-sm-8">
   		<ul class="nav nav-tabs">
   			<li role="presentation"><a href="/groups">グループ</a></li>
- 			<li role="presentation" class="active"><a href="/requests">リクエスト</a></li>
+ 			<li role="presentation" class="active"><a href="/requests">リクエスト (<%= @requests.count %>)</a></li>
  		</ul>
   	</div>
   	<div class="col-xs-0 col-sm-2"></div>
@@ -14,7 +14,7 @@
 
 
 
-<% unless @requests==[] %>
+<% if @requests.any? %>
 
 	<% @requests.each do |r| %>
 		<div class="row">
