--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -52,7 +52,10 @@
         <%= render @tweets %> 
       </div>
     </div>
-    <%= paginate @tweets, remote: true %>
+    <div class="center">
+      <%= paginate @tweets, remote: true %>
+    </div>
+    
   <% else %>
     <div class="col-xs-0 col-sm-2"></div>
     <div class="col-xs-12 col-sm-8"><p>tweetはまだありません</p></div>
