--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -13,9 +13,7 @@
 
           <div class="media">
             <div class="media-left">
-              <a href="#">
-                <%= image_tag tweet.user.image_url, class: "media-object" %>
-              </a>
+              <%= image_tag tweet.user.image_url, class: "media-object" %>
             </div>
             <div class="media-body">
               <h4 class="media-heading">
@@ -26,7 +24,7 @@
           </div>
 
         </div>
-        <div class="panel-footer text-right"><%= tweet.group.group_name %></div>
+        <div class="panel-footer text-right"><%= link_to tweet.group.group_name, group_path(tweet.group.id) %></div>
       </div>
 
     </div>
