--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,7 +5,7 @@
 /* universal */
 
 body {
-  padding-top: 120px;
+  padding-top: 70px;
 }
 
 section {
@@ -23,6 +23,7 @@ textarea {
 .center h1 {
   margin-bottom: 10px;
 }
+
 
 
 
@@ -65,8 +66,10 @@ p {
 }
 
 .field_with_errors {
+  @extend .form-group;
   @extend .has-error;
-  .form-control {
-    color: $state-danger-text;
-  }
+}
+
+.alert-error {
+  color: red;
 }
