--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -24,11 +24,21 @@
  								<div class="panel-body">
   									<div class="row">
     									
-											<div class="col-xs-1 col-sm-1">
+											<div class="col-xs-2 col-sm-2">
 												<%= r.check_box(class: "check_box form-control") %>
 											</div>
-											<div class="col-xs-9 col-sm-9">
-												<%= image_tag r.object.image_url %> <%= r.object.account_name %>@<%= r.object.user_name %>
+											<div class="col-xs-10 col-sm-10">
+												<div class="media">
+  													<div class="media-left">
+      													<%= image_tag r.object.image_url, class: "media-object" %>
+  													</div>
+ 													 <div class="media-body media-middle">
+  														<h4 class="media-heading">
+  															<%= r.object.account_name %> <small>@<%= r.object.user_name %></small>
+  														</h4>
+ 														<%= r.object.description %>
+ 													 </div>
+												</div>
 											</div>
 										
   									</div>
@@ -40,7 +50,7 @@
 				</div>
 				<div class="form_group">
 					<div class="col-xs-offset-0 col-sm-offset-3 col-xs-12 col-sm-9">
-    					<%= f.submit "つくる", class: "btn btn-default" %>
+    					<%= f.submit "つくる", class: "btn btn-primary" %>
     				</div>
    				</div>
     		<% end %>
