--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <!-- <nav class="navbar navbar-default"> -->
-<header class="navbar navbar-default navbar-fixed-top">
+<header class="navbar navbar-inverse navbar-fixed-top">
 	<!-- <div class="container-fluid"> -->
   	<div class='container'>
 
@@ -27,12 +27,13 @@
   			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   				<ul class="nav navbar-nav navbar-right">
   					<li><%= link_to 'つぶやく', new_tweet_path, remote: true %></li>
-  					<li><a href="/groups">グループ</a></li>
-  					<li><a href="/requests">リクエスト</a></li>
+            <li><%= link_to 'グループ', groups_path %></li>
+            <li><%= link_to 'リクエスト', requests_path %></li>
   					<li role="separator" class="divider"></li>
   					<li class="dropdown">
-  						<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.user_name %> <%= image_tag current_user.image_url %> <span class="caret"></span></a>
+  						<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.account_name %> @<%= current_user.user_name %> <span class="caret"></span></a>
   						<ul class="dropdown-menu">
+                <li><%= link_to 'マイページ', user_path(current_user.id) %></li>
   							<li><%= link_to 'ログアウト', logout_path %></li>
   						</ul>
   					</li>
