--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -6,8 +6,7 @@
   			<div class="col-xs-12 col-sm-8">
   				<div class="panel panel-default active">
   					<div class="panel-body">
-    					<%= link_to request.group.group_name, "/groups/#{request.group.id}" %>
-    						(@<%= request.requester.user_name %> より)
+    					<%= link_to request.group.group_name, "/groups/#{request.group.id}" %>	<%= request.requester.account_name %> @<%= request.requester.user_name %> より
   					</div>
 				</div>	
   			</div>
