--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,18 +1,14 @@
 
-
 <div class="row">
-	<div class="col-xs-0 col-sm-2"></div>
-  	<div class="col-xs-12 col-sm-8">
-  		<ul class="nav nav-tabs">
-  			<li role="presentation"><a href="/groups">グループ</a></li>
- 			<li role="presentation" class="active"><a href="/requests">リクエスト</a></li>
- 		</ul>
-  	</div>
-  	<div class="col-xs-0 col-sm-2"></div>
+  <div class="col-xs-0 col-sm-2"></div>
+  <div class="col-xs-12 col-sm-8">
+    <ol class="breadcrumb">
+      <li><a href="/">Home</a></li>
+      <li class="active">リクエスト</li>
+    </ol>
+  </div>
+  <div class="col-xs-0 col-sm-2"></div>
 </div>
-
-
-
 
 <% if @requests.any? %>
 
@@ -21,8 +17,10 @@
   		<%= render @requests %>
   	</div>
   </div>
-  <%= paginate @requests, remote: true %>
-
+  <div class="center">
+    <%= paginate @requests, remote: true %>
+  </div>
+  
 <% else %>
 	<div class="row">
 		<div class="col-xs-0 col-sm-2"></div>
