--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,17 @@
 
 <div class="row">
+  <div class="col-xs-0 col-sm-2"></div>
+  <div class="col-xs-12 col-sm-8">
+    <ol class="breadcrumb">
+      <li><a href="/">Home</a></li>
+      <li><a href="/groups">グループ</a></li>
+      <li class="active">グループ新規作成</li>
+    </ol>
+  </div>
+  <div class="col-xs-0 col-sm-2"></div>
+</div>
+
+<div class="row">
 	<div class="col-xs-0 col-sm-2"></div>
 
   	<div class="col-xs-12 col-sm-8">
