--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,20 @@
 
+<div class="row">
+  <div class="col-xs-0 col-sm-2"></div>
+  <div class="col-xs-12 col-sm-8">
+    <ol class="breadcrumb">
+      <li><a href="/">Home</a></li>
+      <% if @i_am_member %>
+        <li><a href="/groups">グループ</a></li>
+      <% elsif @request_for_me %>
+        <li><a href="/requests">リクエスト</a></li>
+      <% end %>
+      <li class="active"><%= @group.group_name %></li>
+    </ol>
+  </div>
+  <div class="col-xs-0 col-sm-2"></div>
+</div>
+
 <div class="jumbotron">
   	<!-- <div class="container-fluid"> -->
     <div class="row">
@@ -39,7 +55,7 @@
 		<div class="col-xs-0 col-sm-2"></div>
   	<div class="col-xs-12 col-sm-8">
       <div class="page-header">
-        <h2>Group Timeline</h2>
+        <h2>グループタイムライン</h2>
       </div>
     </div>
   	<div class="col-xs-0 col-sm-2"></div>
