--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -12,6 +12,11 @@
 
 <% if @requests.any? %>
 
+  <div class="row">
+    <div class="col-xs-0 col-sm-2"></div>
+    <div class="col-xs-12 col-sm-8"><p>グループへ招待されています。</p></div>
+    <div class="col-xs-0 col-sm-2"></div>
+  </div>
 	<div id="request-list">
 		<div class="page">
   		<%= render @requests %>
