--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,15 @@
 
+<div class="row">
+  <div class="col-xs-0 col-sm-2"></div>
+  <div class="col-xs-12 col-sm-8">
+    <ol class="breadcrumb">
+      <li><a href="/">Home</a></li>
+      <li class="active">マイページ</li>
+    </ol>
+  </div>
+  <div class="col-xs-0 col-sm-2"></div>
+</div>
+
 <%= image_tag @user.banner_url, class: "img-responsive" %>
 
 <div class="row">
@@ -28,7 +39,7 @@
   <div class="col-xs-0 col-sm-2"></div>
   <div class="col-xs-12 col-sm-8">
     <div class="page-header">
-      <h2>User Timeline</h2>
+      <h2>ユーザータイムライン</h2>
     </div>
   </div>
   <div class="col-xs-0 col-sm-2"></div>
