--- a/app/views/layouts/_majitter.html.erb
+++ b/app/views/layouts/_majitter.html.erb
@@ -1,5 +1,5 @@
 
-<div class="jumbotron">
+<div class="jumbotron jumbotron-extend">
 	<div class="container">
   		<h1>Majitter</h1>
   		<p>Majitter enables you to tweet in private groups as LINE's group talk.</p>
@@ -11,49 +11,53 @@
     <div class="col-xs-0 col-sm-1"></div>
     <div class="col-xs-12 col-sm-10">
 
+    	<h1 class="center"><em><small>LINE + Twitter => </small> Majitter</em></h1>
+
 	    <div class="page-header">
-  			<h1>Concept <small>-Majitterとはいかなるものか-</small></h1>
+  			<h1>What ? <small>-Majitterとはいかなるものか-</small></h1>
 		</div>
 		<div class="media">
   			<div class="media-body">
     			<!-- <h4 class="media-heading">Media heading</h4> -->
-    			今日、Twitter や LINE といったSNSは、私たちにとってメジャーなコミュニケーションツールですね。<br>
-    			LINE の グループトーク では、複数の仲間たちと同時に会話を楽しむことができます。<br>
-    			Twitter では、つぶやくことによって多くの人たちと情報や感動を共有することができます。<br>
+    			今日、TwitterやLINEといったSNSは、私たちにとってメジャーなコミュニケーションツールですね。<br>
+    			LINEのグループトークでは、複数の仲間たちと同時に会話を楽しむことができます。<br>
+    			Twitterでは、つぶやくことによって多くの人たちと情報や感動を共有することができます。<br>
     			<br>
     			でも、こんなことってありませんか？<br>
     			<br>
     			「これちょっとおもしろいんだけど、LINEで送るほどでもないな。」<br>
-    			「この感動を伝えたい！ でも、フォロワーみんなじゃなくていいんだけど…」<br>
+    			「この感動を共有したい！ でも、フォロワーみんなってわけじゃないんだけど…」<br>
     			<br>
-    			Majitter はこんなときに使えるコミュニケーションツールです。<br>
-    			Majitter は、<br>
+    			Majitterはこんなときに使えるコミュニケーションツールです。<br>
+    			Majitterは、<br>
     			<br>
     			<ul>
-  					<li><h2>LINE の グループトーク のようなプライベートな空間</h2></li>
-  					<li><h2>Twitter のような返信を前提としないコミュニケーションのかたち</h2></li>
+  					<li><h3>LINEのグループトークのようなプライベートな空間</h3></li>
+  					<li><h3>Twitterのような返信を前提としないコミュニケーションのかたち</h3></li>
   				</ul>
   				<br>
     			を提供いたします。<br>
-    			使い慣れた LINE や Twitter の延長感覚で、簡単に利用することができます。<br>
+    			使い慣れたLINEやTwitterの延長感覚で、簡単に利用することができます。<br>
     			<br>
   			</div>
 		</div>
 
 		<div class="page-header">
-  			<h1>How to use <small>-Majitterの使い方-</small></h1>
+  			<h1>How to use ? <small>-Majitterの使い方-</small></h1>
 		</div>
 		<div class="media">
   			<div class="media-body">
-    			<!-- <h4 class="media-heading">Media heading</h4> -->
-    			まずは Twitterアカウントで Majitter にログインしてみましょう。<br>
-    			Majitter は、Twitter APIを用いたサービスです。お持ちのTwitterアカウントで利用することができます。新たな登録の手間は必要ありません。<br>
+    			<h4 class="media-heading">　Twitterアカウントでログイン</h4>
+    			まずはTwitterアカウントでMajitterにログインしてみましょう。<br>
+    			Majitterは、Twitter　APIを用いたサービスです。お持ちのTwitterアカウントで利用することができます。新たな登録の手間は必要ありません。<br>
     			<br>
-    			ログインしたら、まずは LINE の グループトーク のようにグループを作りましょう。<br>
-    			Twitterアカウントのフォロワーからメンバーを選んで、グループを作成することができます。  ※ メンバーは Majitter を利用している必要があります。<br>
+    			<h4 class="media-heading">　グループをつくる</h4>
+    			ログインしたら、まずはLINEのグループトークのようにグループを作りましょう。<br>
+    			Twitterアカウントのフォロワーからメンバーを選んで、グループを作成することができます。  ※ メンバーはMajitterを利用している必要があります。<br>
     			<br>
-    			グループをつくれたら、Twitter のようにつぶやいてみましょう。<br>
-    			Majitter ではつぶやくときにグループを選択してつぶやきます。そのtweetはグループのメンバーでのみ共有されます。<br>
+    			<h4 class="media-heading">　グループでつぶやく</h4>
+    			グループをつくれたら、Twitterのようにつぶやいてみましょう。<br>
+    			Majitterではつぶやくときにグループを選択してつぶやきます。そのTweetはグループのメンバーでのみ共有されます。<br>
     			<br>
   			</div>
 		</div>
@@ -65,7 +69,7 @@
   			<div class="media-body">
     			<!-- <h4 class="media-heading">Media heading</h4> -->
     			Majitterは、あなたのTwitterアカウントの情報をもとに成り立つサービスです。<br>
-    			Majitterは Twitter API を通して以下の情報を取得します。<br>
+    			Majitterは、Twitter APIを通して以下の情報を取得します。<br>
     			<ul>
   					<li>ユーザーid</li>
   					<li>ユーザー名</li>
@@ -73,12 +77,12 @@
   					<li>プロフィール画像のurl</li>
   					<li>自己紹介</li>
   					<li>プロフィールの背景画像のurl</li>
-  					<li>フォロワーのid</li>
+  					<li>フォロワーのユーザーid</li>
   				</ul>
-  				これらの情報は読み取るだけであり、Majitter が Twitterアカウント に対して影響を及ぼすことはありません。<br>
-  				フォロワーのid以外の上記の情報と、Majitter上でのあなたのtweetは、Majitterのデータベースに保存されます。<br>
-  				また、これらの情報は、Majitterのサービス以外で用いられることはありません。<br>
-  				あなたが Majitter を退会する際には、Majitterのデータベースからこれらの情報はすべて削除されます。<br>
+  				これらの情報は読み取るだけであり、MajitterがTwitterアカウントに対して影響を及ぼすことはありません。<br>
+  				フォロワーのユーザーid以外の上記の情報と、Majitter上でのあなたのTweetは、Majitterのデータベースに保存されます。<br>
+  				また、これらの情報はMajitterのサービス以外で用いられることはありません。<br>
+  				あなたがMajitterを退会する際には、Majitterのデータベースからこれらの情報はすべて削除されます。<br>
   				<br>
 
   			</div>
