--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,3 +73,13 @@ p {
 .alert-error {
   color: red;
 }
+
+
+
+
+/* main site */
+
+.jumbotron-extend {
+    background: url(/assets/main.jpg) no-repeat center center;
+    background-size: cover;
+}
