--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -24,20 +24,13 @@
 
 <% if @groups.any? %>
 
-  <div id="group-list">
-    <div class="page">
-      <%= render @groups %>
-    </div>
-  </div>
-  <div class="center">
-    <%= paginate @groups, remote: true %>
-  </div>
+  <%= render @groups %>
 
 <% else %>
 	<div class="row">
 		<div class="col-xs-0 col-sm-2"></div>
-  		<div class="col-xs-12 col-sm-8"><p>グループはまだありません。グループを作成して見ましょう！</p></div>
-  		<div class="col-xs-0 col-sm-2"></div>
+  	<div class="col-xs-12 col-sm-8"><p>グループはまだありません。グループを作成してみましょう！</p></div>
+  	<div class="col-xs-0 col-sm-2"></div>
 	</div>
 
 <% end %>
