--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -12,8 +12,14 @@
 				<%= render @tweets %> 
 			</div>
 		</div>
-		<div class="center">
-			<%= paginate @tweets, remote: true %>
+		<div class="row">
+    		<div class="col-xs-0 col-sm-2"></div>
+    		<div class="col-xs-12 col-sm-8">
+     			<div class="center">
+        			<%= paginate @tweets, remote: true %>
+      			</div>
+    		</div>
+    		<div class="col-xs-0 col-sm-2"></div>
 		</div>
 
 	<% else %>
