change background-image url-image

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -80,6 +80,6 @@ p {
 /* main site */
 
 .jumbotron-extend {
-    background: image-url(/assets/main.jpg) no-repeat center center;
+    background: image-url("main.jpg") no-repeat center center;
     background-size: cover;
 }
